bpo-40928: OSX allocations over 4TB always return NULL

* This prevents Apple's libc from sending messages to STDERR.